kservice-a/app.yaml
kind: Service
apiVersion: v1
metadata:
  name: kservice-a-public
  namespace: polyglot
  labels:
    app: kservice-a
spec:
  type: LoadBalancer
  selector:
    app: kservice-a
  ports:
    - port: 80
      targetPort: 8080
      name: externalhttp
---
kind: Service
apiVersion: v1
metadata:
  name: kservice-a
  namespace: polyglot
  labels:
    app: kservice-a
spec:
  type: ClusterIP
  selector:
    app: kservice-a
  ports:
  - port: 8080
    targetPort: 8080
    name: http
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kservice-a
  namespace: polyglot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kservice-a
  template:
    metadata:
      labels:
        app: kservice-a
        version: v1
    spec:
      containers:
      - name: kservice-a
        image: tuxtor/kservice-a:laouc-1.0.0
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: 500m
            ephemeral-storage: "1Gi"
          limits:
            memory: "256Mi"
            cpu: 1000m
            ephemeral-storage: "2Gi"
        ports:
        - containerPort: 8080
---
