kservice-a/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kservice-a-ingress
  namespace: polyglot
spec:
  rules:
    - host: kservice-a.vorozco.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kservice-a
                port:
                  number: 8080
